<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ims_background"
    tools:context=".presentation.ItemCreateActivity">

    <android.support.v7.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="500dp"
        android:layout_height="587dp"
        app:columnCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.263"
        app:rowCount="6">

        <TextView
            android:id="@+id/itemNameLabel"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:text="@string/item_name"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="0" />

        <TextView
            android:id="@+id/itemPriceLabel"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:text="@string/item_price"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="1" />

        <TextView
            android:id="@+id/itemQuantityLabel"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:text="@string/item_quantity"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="2" />

        <TextView
            android:id="@+id/itemDateLabel"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:text="@string/item_date"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="3" />

        <TextView
            android:id="@+id/itemCategoryLabel"
            android:layout_width="250dp"
            android:layout_height="77dp"
            android:text="@string/item_category"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="4" />

        <TextView
            android:id="@+id/itemLocationLabel"
            android:layout_width="250dp"
            android:layout_height="88dp"
            android:text="@string/item_location"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="5" />

        <EditText
            android:id="@+id/itemNameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/placeholderName"
            android:inputType="textPersonName"
            android:textAlignment="center"
            app:layout_column="1"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            app:layout_row="0" />

        <EditText
            android:id="@+id/itemPriceInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:ems="10"
            android:hint="@string/placeholderPrice"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            app:layout_column="1"
            app:layout_row="1" />

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="211dp"
            android:layout_height="38dp"
            android:spinnerMode="dropdown"
            android:textColor="@color/textColor"
            app:layout_column="1"
            app:layout_row="4" />

        <Spinner
            android:id="@+id/spinnerLocation"
            android:layout_width="211dp"
            android:layout_height="39dp"
            android:textColor="@color/textColor"
            app:layout_column="1"
            app:layout_row="5" />

        <TextView
            android:id="@+id/itemDollarLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_dollar_sign"
            android:textSize="20sp"
            app:layout_column="1"
            android:textColor="@color/textColor"
            app:layout_row="1" />

        <EditText
            android:id="@+id/itemQuantityInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/placeholderQuantity"
            android:inputType="number"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoText="true"
            android:ems="10"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            android:inputType="date" />

    </android.support.v7.widget.GridLayout>

    <Button
        android:id="@+id/itemCreateBtn"
        android:layout_width="134dp"
        android:layout_height="46dp"
        android:layout_marginLeft="@dimen/default_gap"
        android:layout_marginRight="@dimen/default_gap"
        android:background="@drawable/custom_button"
        android:text="@string/item_create"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />
</android.support.constraint.ConstraintLayout>