...
        android:layout_marginBottom="250dp"
        android:theme="@style/ListFont">

    </ListView>

    <TextView
        android:id="@+id/categoryName"
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="27dp"
        android:layout_marginBottom="118dp"
...
        android:inputType="textPersonName"
        android:text="Name"
        android:textColor="#ffffff"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/txtCategoryName"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="40dp"
...
        android:background="@drawable/custom_button"
        android:onClick="buttonsDeleteCategoryOnClick"

        android:text="Delete" />

    <Button
        android:id="@+id/btnCreateCategory"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="35dp"
        android:background="@drawable/custom_button"
        android:onClick="buttonsCreateCategoryOnClick"
        android:text="Create" />


</RelativeLayout>
