<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/itemName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:text="ItemName"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/categoryName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:text="CategoryName"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/itemPrice"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:text="itemPrice"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/itemQuantity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:text="itemQuantity"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/viewAllItems"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_weight="4"
        android:onClick="buttonViewAllOnClick"
        android:layout_gravity="center"
        android:background="@drawable/custom_blue_button"
        android:layout_marginRight="@dimen/default_gap"
        android:text="ViewAll" />

    <Button
        android:id="@+id/Edit"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_weight="4"
        android:onClick="buttonEditDialogOnClick"
        android:layout_gravity="center"
        android:background="@drawable/custom_button"
        android:layout_marginRight="@dimen/default_gap"

        android:text="Edit" />

    <Button
        android:id="@+id/addItem"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_weight="4"
        android:onClick="buttonAddOnClick"
        android:layout_gravity="center"
        android:background="@drawable/plus_button"
        android:layout_marginRight="@dimen/default_gap"

        android:text="+" />
</LinearLayout>